--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,7 @@
     <slf4j.version>2.0.7</slf4j.version>
 
     <cloudbees-disk-usage-simple.version>0.10</cloudbees-disk-usage-simple.version>
+    <code-coverage-api.version>4.0.2</code-coverage-api.version>
     <metrics.version>4.1.6.1</metrics.version>
     <pipeline-rest-api.version>2.21</pipeline-rest-api.version>
 
@@ -118,6 +119,12 @@
       <groupId>org.jenkins-ci.plugins</groupId>
       <artifactId>cloudbees-disk-usage-simple</artifactId>
       <version>${cloudbees-disk-usage-simple.version}</version>
+      <optional>true</optional>
+    </dependency>
+    <dependency>
+      <groupId>io.jenkins.plugins</groupId>
+      <artifactId>code-coverage-api</artifactId>
+      <version>${code-coverage-api.version}</version>
       <optional>true</optional>
     </dependency>
     <dependency>
