--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
   </parent>
 
   <artifactId>prometheus</artifactId>
-  <version>2.4.0</version>
+  <version>2.4.1-SNAPSHOT</version>
   <packaging>hpi</packaging>
   <name>Prometheus metrics plugin</name>
   <description>Expose Jenkins metrics in prometheus format</description>
@@ -60,7 +60,7 @@
     <connection>scm:git:https://github.com/jenkinsci/prometheus-plugin.git</connection>
     <developerConnection>scm:git:git@github.com:jenkinsci/prometheus-plugin.git</developerConnection>
     <url>https://github.com/jenkinsci/prometheus-plugin/</url>
-    <tag>prometheus-2.4.0</tag>
+    <tag>prometheus-2.3.2</tag>
   </scm>
 
   <repositories>
