--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
   </parent>
 
   <artifactId>prometheus</artifactId>
-  <version>2.5.3</version>
+  <version>${revision}${changelist}</version>
   <packaging>hpi</packaging>
   <name>Prometheus metrics plugin</name>
   <description>Expose Jenkins metrics in prometheus format</description>
@@ -17,7 +17,7 @@
   <inceptionYear>2016</inceptionYear>
 
   <properties>
-    <revision>2.5.3</revision>
+    <revision>2.5.4</revision>
     <changelist>-SNAPSHOT</changelist>
     <gitHubRepo>jenkinsci/prometheus-plugin</gitHubRepo>
     <!-- when updated the io.jenkins.tools.bom:bom-X.Y.Z must be updated too -->
@@ -52,7 +52,7 @@
     <connection>scm:git:https://github.com/${gitHubRepo}.git</connection>
     <developerConnection>scm:git:git@github.com:${gitHubRepo}.git</developerConnection>
     <url>https://github.com/${gitHubRepo}</url>
-    <tag>prometheus-2.5.3</tag>
+    <tag>${scmTag}</tag>
   </scm>
 
   <repositories>
